mantis 0004389 : correction z-index

--- a/themes/plateforme-citoyenne-theme/custom/scss/override/custom.scss
+++ b/themes/plateforme-citoyenne-theme/custom/scss/override/custom.scss
@@ -227,3 +227,8 @@ aside .leaflet-map {
 .centerButtonValidation{
     text-align:center;
 }
+
+//override permettant de rendre cliquable le bouton liferay pour les administrateurs mantis : 4389
+.dropdown.lfr-icon-menu {
+    z-index:100;
+}
